[package]
name = "kvs"
version = "0.1.0"
edition = "2024"
authors = ["Zarrko <zarrko@>"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
prost = "0.13"
prost-types = "0.13"
protobuf = "3.7.1"
crc32fast = "1.4.2"
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
sled = "0.34.7"
toml = "0.8.20"

[build-dependencies]
prost = "0.13"
prost-build = "0.13"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
